# RedCross

./: .gitignore  CMakeLists.txt  CMakeListsPrivate.txt  Doxyfile  Doxyfile-mcss  Makefile  README.md  includes.cmake  platformio.ini  sdkconfig  sdkconfig.old
.broken/: DebugUtils.h  index.h
data/: index.html
docs/: index.html
docs/html/: AccelGyro_8cpp.html  AccelGyro_8h.html  App_8hpp.html  BarPAT_8cpp.html  BarPAT_8h.html  CMakeLists_8txt.html  DataServer_8h.html  DeviceManager_8h.html  ErrorLog_8hpp.html  Event_8hpp.html  GPIOPerif_8hpp.html  GPS_8cpp.html  GPS_8h.html  HttpUploader_8cpp.html  HttpUploader_8h.html  I2CPerif_8hpp.html  I2Cdev_8cpp.html  I2Cdev_8h.html  LidarMap_8cpp.html  LidarMap_8h.html  MPU6050_8cpp.html  MPU6050_8h.html  MPU6050__6Axis__MotionApps20_8h.html  MPU6050__9Axis__MotionApps41_8h.html  Perif_8hpp.html  Queue_8hpp.html  README_8md.html  SDFileIO_8hpp.html  SPIPerif_8hpp.html  Thread_8hpp.html  Timer_8hpp.html  UARTPerif_8hpp.html  USDist_8cpp.html  USDist_8h.html  WiFi_8cpp.html  WiFi_8hpp.html  annotated.html  classApp.html  classDataServer.html  classDeviceManager.html  (+72 more)
docs/latex/: AccelGyro_8cpp.tex  AccelGyro_8h.tex  App_8hpp.tex  BarPAT_8cpp.tex  BarPAT_8h.tex  CMakeLists_8txt.tex  DataServer_8h.tex  DeviceManager_8h.tex  ErrorLog_8hpp.tex  Event_8hpp.tex  GPIOPerif_8hpp.tex  GPS_8cpp.tex  GPS_8h.tex  HttpUploader_8cpp.tex  HttpUploader_8h.tex  I2CPerif_8hpp.tex  (+106 more)
include/: DebugUtils.h  DeviceManager.h  Pair.h  index.h  redcross.h
main/: CMakeLists.txt  main.cpp
resources/: flood_sensor.cast
src/: main.cpp  redcross.cpp
(+179 files in other folders)
